# services

./: .gitignore  LICENSE  README.md
lib/: conanfile.txt
src/: services.cmake
src/service.libusb/: CMakeLists.txt  acm.cpp  acm.h  usb.cpp  usb.h  wrapper.h
src/service.libusb/include/moducom/: libusb.h
src/service.libusb/include/moducom/libusb/: diagnostic.hpp  scoped.h  service.h  service.hpp  wrapper.h
src/services/: CMakeLists.txt  agents.hpp  library.h  managers.hpp  semver.h  service.hpp  services.h  status.h  stop_token.h
src/services.tests/: CMakeLists.txt  agents.cpp  depend.cpp  managers.cpp  misc.cpp  services.cpp  services.h  usb.cpp
src/services/include/moducom/: portable_endian.h  scoped.h  stop_token.h
src/services/include/moducom/experimental/: bitenum.h
src/services/include/moducom/internal/: argtype.h
src/services/include/moducom/services/: agent.h  description.h  managers.hpp  status.h  token.h
test/enumerator/: CMakeLists.txt  main.cpp
test/terminal.ncurses/: CMakeLists.txt  main.cpp
test/terminal.ncurses/lib/: conanfile.txt
